--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -32,6 +32,20 @@
             </div>
         </div>
         
+       
+            <label>Full Name*</label>
+        <br>
+            <input type="text" name="full_name">
+        <br>
+            <label>Username*</label>
+        <br>
+            <input type="text" name="username">
+        <br>
+            <label>Bio*</label>
+        <br>    
+            <input type="text" name="bio" maxlength="280">
+        
+
         <!-- Button -->
         <div>
             <input type="submit"/>
